# gazebo-simulation

./: .gitignore  ASSIGNMENT_GUIDE.md  CMakeLists.txt  QUICK_REFERENCE.txt  README.md  ROS2_QUICK_START.md  ROS_CONTROL_GUIDE.md  package.xml  run_auto_demo.sh  run_gazebo.sh  run_ros2.sh  run_simple.sh
config/: controllers.yaml
launch/: gazebo_sim.launch.py  robot_control.launch  robot_control.launch.py
models/simple_3dof_arm/: model.config  model.sdf
plugins/: arm_animation_plugin.cc
scripts/: auto_demo.py  control_arm.py
worlds/: simple_table_world.world
