<?xml version="1.0"?>
<package format="2">
  <name>simple_3dof_arm</name>
  <version>1.0.0</version>
  <description>Simple 3-DOF robot arm simulation for Gazebo with ROS control</description>
  
  <maintainer email="piyushkumar0707@example.com">Piyush Kumar</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>

</package>
